[gd_scene load_steps=2 format=3 uid="uid://bwn3q3ie17me3"]

[ext_resource type="Script" uid="uid://bmtodx1x01wwc" path="res://right_panel_control.gd" id="1_c8jvb"]

[node name="StartGameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 512.0
script = ExtResource("1_c8jvb")

[node name="PlayLocalButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -49.0
offset_right = 43.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Local"

[node name="PlayComputerButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 19.0
offset_right = 62.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Play Computer"

[node name="PlayOnlineButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play Online"

[connection signal="pressed" from="PlayLocalButton" to="." method="_on_play_local_button_pressed"]
[connection signal="pressed" from="PlayComputerButton" to="." method="_on_play_computer_button_pressed"]
[connection signal="pressed" from="PlayOnlineButton" to="." method="_on_play_online_button_pressed"]
